finalização do app mobile e indo para o deployment
